# knm_soundfont

./: CMakeLists.txt  LICENSE  README.md  knm_soundfont.hpp
.github/workflows/: build.yaml
docs/: CMakeLists.txt  Doxyfile.in  api_generators.rst  api_information.rst  api_keyinfo.rst  api_modulators.rst  api_sample.rst  api_sampleinfo.rst  api_soundfont.rst  conf.py  index.rst  license.rst  usage.rst
examples/: CMakeLists.txt  view_all.cpp  view_key.cpp
tests/: CMakeLists.txt  main.cpp
tests/data/: 440_24bits.sf2
